--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "fetch": "^1.1.0",
     "jwt-decode": "^3.1.2",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
