--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
-    "vuetify": "npm:@vuetify/nightly@next",
+    "vuetify": "^3.1.2",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
   },
@@ -48,7 +48,6 @@
     "vue-cli-plugin-moment": "~0.1.1",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-cli-plugin-webpack": "~0.1.0",
-    "vuetify-loader": "^2.0.0-alpha.0",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
